@@ -1,0 +1,3 @@
+int shm_fd;
+shm_t *shmptr = NULL;
+char shm_file_name[128];
