@@ -1,3 +1,10 @@
+* Using a more modern unix sharedmemory API. this requires linking with librt.so  (requested by fatbob)
+* Added away to know if umurmurd is not connected/updateing the shm_t struct. I use 8bit timer with 
+  rollover protection see check_serverTick() and where I use the function near bottum of mon-umurmurd.c 
+	for	how	to use this.
+
+
 * code clean up and some comments added
-* 100% of the useful client data shown
-* outputs a more meaningful idle and online time, both are reported in secs
+* ~95% of the useful client data shown
+* outputs a more meaningful idle and online time, both are reported in secs (error reported by fatbob)
+    
